[gd_scene load_steps=7 format=2]

[ext_resource path="res://challenges/week5/gfx/tank/tank.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week5/scenes/character/character.gd" type="Script" id=2]
[ext_resource path="res://common/sfx/engine/engine_not_moving.ogg" type="AudioStream" id=3]
[ext_resource path="res://common/sfx/engine/engine_moving.ogg" type="AudioStream" id=4]
[ext_resource path="res://common/sfx/error/error.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 30 )

[node name="character" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
monitoring = false
monitorable = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
process_priority = -5
rotation = -1.5708
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
radius = 82.18
neighbor_dist = 27772.7
max_speed = 50.0

[node name="TankStop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 3.0

[node name="TankMoving" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="SelectionMark" type="Polygon2D" parent="."]
position = Vector2( 2, 2 )
color = Color( 0.152941, 1, 0.0823529, 1 )
invert_enable = true
invert_border = 6.0
polygon = PoolVector2Array( -42, 26, -42, -30, 42, -30, 42, 26 )

[connection signal="input_event" from="." to="." method="_on_character_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_character_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_character_mouse_exited"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
